--- a/2/домашнее_задание/3.html
+++ b/2/домашнее_задание/3.html
@@ -36,11 +36,11 @@
   b = myPromptNumber();
 
   if (a > 0 && b > 0){
-    console.log(a - b) 
+    console.log(a - b); 
   } else if (a < 0 && b < 0) {
-    console.log(a * b)
+    console.log(a * b);
   } else if (a * b > 0) {
-    console.log(a + b)
+    console.log(a + b);
   }
     
 
