--- a/3/домашнее_задание/1.html
+++ b/3/домашнее_задание/1.html
@@ -21,11 +21,11 @@
 
   for (let count = 0; count < 11; count++) {
     if (count == 0){
-      console.log(`${count} - это ноль`)
+      console.log(`${count} - это ноль`);
     } else if (count % 2 == 0) {
-      console.log(`${count} - это четное число`)
+      console.log(`${count} - это четное число`);
     } else {
-      console.log(`${count} - это нечетное число`)
+      console.log(`${count} - это нечетное число`);
     }
   }
 
