--- a/3/домашнее_задание/6.html
+++ b/3/домашнее_задание/6.html
@@ -25,7 +25,7 @@ xxxxx
 <script>
   "use strict";
 
-  const sign = 'x'
+  const sign = 'x';
 
   for( let i = 1; i <= 20; i++) {
     printX(sign, i);
