--- a/4/домашнее_задание/3.html
+++ b/4/домашнее_задание/3.html
@@ -65,7 +65,7 @@
     }
   }
 
-  console.log(getDigitsOfNumber(133).hundreds)
+  console.log(getDigitsOfNumber(133).hundreds);
 
 </script>
 </body>
