--- a/3/домашнее_задание/3.html
+++ b/3/домашнее_задание/3.html
@@ -30,8 +30,8 @@
   ];
 
   products.forEach(product => {
-    product.price *= 0.85
-    console.log(product.price)
+    product.price *= 0.85;
+    console.log(product.price);
   })
 
 
