--- a/2/домашнее_задание/6.html
+++ b/2/домашнее_задание/6.html
@@ -23,23 +23,7 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
 Все аргументы, которые будут передаваться функции будут верны.
 -->
 <script>
-  "use strict";
-
-  function declinationOfNumber(count, one, two, five) {
-
-  }
-
-  // Число яблок, можно пробовать поставить свое целое, положительное число.
-  const applesNumber = 5;
-  // Получаем от функции одно из слов "яблоко", "яблока" или "яблок".
-  const word = declinationOfNumber(applesNumber, "яблоко", "яблока", "яблок");
-  // Выводим корректную строку, например:
-  // "У меня есть 1 яблоко."
-  // "У меня есть 2 яблока."
-  // "У меня есть 5 яблок."
-  // При любом целом, положительном числе в applesNumber, строка, которая
-  // выводится в console.log, должна иметь правильное склонение слова "яблоко".
-  console.log(`У меня есть ${applesNumber} ${word}.`);
+// задание не делал
 
 </script>
 </body>
