--- a/5/домашнее_задание/1.html
+++ b/5/домашнее_задание/1.html
@@ -65,8 +65,8 @@
   data-number со значением 50 и вывести его в консоль.
    */
 
-   const firstElement = document.querySelector('[data-number="50"]')
-   console.log(firstElement)
+   const firstElement = document.querySelector('[data-number="50"]');
+   console.log(firstElement);
 
 
   /*
