--- a/5/домашнее_задание/3.html
+++ b/5/домашнее_задание/3.html
@@ -133,11 +133,11 @@
    */
   
   document
-    .querySelectorALL('li:nth-child(2n)')
-    .forEach(el => el.style.backgroundColor = 'red');
+    .querySelectorAll('li:nth-child(2n)')
+    .forEach(el => el.style.backgroundColor = 'green');
 
-  const example = document.querySelectorAll('li:nth-child(2n)')
-  example.forEach(element => element.style.backgroundColor = 'red');
+  // const example = document.querySelectorAll('li:nth-child(2n)')
+  // example.forEach(element => element.style.backgroundColor = 'red');
   
   // почему не работает? запись идентична той, что в решении. ни 1 из них. 
 
