--- a/6/домашнее_задание/1.html
+++ b/6/домашнее_задание/1.html
@@ -43,15 +43,15 @@
   1. Установите всем элементам с классом "productName" размер шрифта 24px.
    */
 
-  const forTask1 = document.querySelectorAll('.productName')
-  forTask1.forEach(el => el.style.fontSize = '24px')
+  const forTask1 = document.querySelectorAll('.productName');
+  forTask1.forEach(el => el.style.fontSize = '24px');
 
   /*
   2. Установите всем элементам с классом "product" внешний отступ справа 50px.
    */
 
-  const forTask2 = document.querySelectorAll('.product')
-  forTask2.forEach(el => el.style.marginRight = '50px')
+  const forTask2 = document.querySelectorAll('.product');
+  forTask2.forEach(el => el.style.marginRight = '50px');
 
   /*
   3. При клике на кнопку "В корзину" название кнопки должно поменяться на
@@ -65,7 +65,7 @@
       button.disabled = true;
     }
     else {
-      return
+      return;
     }
   });
 
@@ -79,22 +79,22 @@
   должен правильно работать код из 3-го задания.
    */
 
-  const forCopy = document.querySelector('.product').cloneNode(true)
+  const forCopy = document.querySelector('.product').cloneNode(true);
 
   forCopy
     .querySelector('img')
     .src = 'https://picsum.photos/id/1080/200/300'
 
-  forCopy.querySelector('div').textContent = "Товар 4"
-  console.log(forCopy)
-  document.querySelector('.product:last-of-type').replaceWith(forCopy)
+  forCopy.querySelector('div').textContent = "Товар 4";
+  console.log(forCopy);
+  document.querySelector('.product:last-of-type').replaceWith(forCopy);
 
   /*
   5. По истечению 2 секунд с момента открытия страницы первый товар должен быть
   удален из html.
    */
   function delEl () {
-    document.querySelector('.product').remove()
+    document.querySelector('.product').remove();
   }
    setTimeout(delEl, 2000);
 
