--- a/6/домашнее_задание/2.html
+++ b/6/домашнее_задание/2.html
@@ -65,10 +65,10 @@
   должно моментально отображаться в span. То есть при печати в input'е тег span
   также должен меняться.
   */
-  const inputEl = document.querySelector('input')
-  const spanEl = document.querySelector('span')
+  const inputEl = document.querySelector('input');
+  const spanEl = document.querySelector('span');
   inputEl.addEventListener('input', event => {
-    spanEl.textContent = inputEl.textContent
+    spanEl.textContent = inputEl.textContent;
   })
   /*  знаю, что можно использовать как event.target.textContent. изначально 
   просто так написал)
@@ -82,10 +82,10 @@
   2) поставить данному элементу стиль visibility в значение 'visible'.
    */
 
-   const mesBtnEl = document.querySelector('.messageBtn')
-   const message = document.querySelector('message')
+   const mesBtnEl = document.querySelector('.messageBtn');
+   const message = document.querySelector('message');
    mesBtnEl.addEventListener('click', event => {
-    message.querySelector('.message').classList.add('animate__animated', 'animate__fadeInLeftBig')
+    message.querySelector('.message').classList.add('animate__animated', 'animate__fadeInLeftBig');
     message.style.visibility = 'visible';
    })
    
@@ -119,7 +119,7 @@
       return;
     }
     if (event.target.value === '') {
-      event.target.classList.add('error')
+      event.target.classList.add('error');
     }
     if (event.target.value !== '') {
       event.target.classList.remove('error');
